--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,14 @@
                 <action android:name="android.intent.action.AIRPLANE_MODE" />
             </intent-filter>
         </receiver>
+        <receiver
+            android:name=".ButtonPressedReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="org.bubulescu.broadcast.BUTTON_PRESSED" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
